# mouse_terminal

./: Cargo.toml  README.md  config.toml
src/: executor.rs  history.rs  input.rs  main.rs  ui.rs
