[package]
name = "mouse_term"
version = "0.1.0"
edition = "2024"
authors = ["Rust Developer"]
description = "A cross-platform, mouse-driven terminal emulator"

[dependencies]
crossterm = "0.27"
ratatui = "0.24"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
unicode-width = "0.1"
chrono = "0.4"
